A bug in mirror modifier. #37837

Closed
opened 2013-12-17 14:53:55 +01:00 by Marcin Roguski · 8 comments

System Information
Windows 7 Professional with SP1, 32-bit
Graphic card: NVIDIA NVS 5100M

Blender Version
Broken: Blender 2.63 r45996
Worked: Blender 2.62 r44136

Short description of error
This error is about the Merge flag in mirror modifier.

In Every version before 2.63, using this flag caused the vertices, that were close enough to the 'mirror plane', to be merged at the center of the distance between them.
Since blender 2.63 when I use this checkbox, the vertices of the original shape are dragged to the mirrored verts.
The verts of the mirrored shape are not moved towards the mirror plane.
This causes the vertices of the original shape to cross the mirror plane, even if the 'clipping' checkbox is checked.

This bug still exists in 2.69.

I hope I am correct and this is indeed a bug and not a feature ;)

Exact steps for others to reproduce the error

  1. Open a new default blender scene.
  2. Select the Cube and go to the mesh edit mode. (you can hit '1' and '5' on the numeric pad for better view)
  3. Select all vertices and move them to negative x positions so that the highest vertices X values are: -0.1
  4. Go back to object mode and apply mirror modifier.
  5. Set merge limit to: 0.21 (or any value greater than 0.1).mirror-modifier-bug-269.blend
**System Information** Windows 7 Professional with SP1, 32-bit Graphic card: NVIDIA NVS 5100M **Blender Version** Broken: Blender 2.63 r45996 Worked: Blender 2.62 r44136 **Short description of error** This error is about the Merge flag in mirror modifier. In Every version before 2.63, using this flag caused the vertices, that were close enough to the 'mirror plane', to be merged at the center of the distance between them. Since blender 2.63 when I use this checkbox, the vertices of the original shape are dragged to the mirrored verts. The verts of the mirrored shape are not moved towards the mirror plane. This causes the vertices of the original shape to cross the mirror plane, even if the 'clipping' checkbox is checked. This bug still exists in 2.69. I hope I am correct and this is indeed a bug and not a feature ;) **Exact steps for others to reproduce the error** 1. Open a new default blender scene. 2. Select the Cube and go to the mesh edit mode. (you can hit '1' and '5' on the numeric pad for better view) 3. Select all vertices and move them to negative x positions so that the highest vertices X values are: -0.1 4. Go back to object mode and apply mirror modifier. 5. Set merge limit to: 0.21 (or any value greater than 0.1).[mirror-modifier-bug-269.blend](https://archive.blender.org/developer/F43666/mirror-modifier-bug-269.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kaelthas

Added subscriber: @kaelthas

This issue was referenced by blender/blender-addons-contrib@7214001cdb

This issue was referenced by blender/blender-addons-contrib@7214001cdb142cb2556135b1f6e35290c62b9a69

This issue was referenced by 7214001cdb

This issue was referenced by 7214001cdb142cb2556135b1f6e35290c62b9a69

Added subscriber: @brecht

Added subscriber: @brecht

Fixed, thanks for the report.

Fixed, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7214001cdb.

Closed by commit 7214001cdb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37837
No description provided.