Fix T37837: mirror modifier merge does not place vertices at the center.

This was broken since BMesh.